# CS496-Cloud-Computing-Project

./: .env.example  .gitignore  Dockerfile  Progress.md  Projects.docx  README.md  pyproject.toml  requirements.txt  script.py  tempscript.py
SimulatedDevice/: config.py  config.yaml  device.py  utils.py  weather.py
devices/: main.py  script.py
devices/humidity/: Humdity.py  HumidityAggregated.py  __init__.py  humidity_config.yaml
devices/util/: load_env.py
devices/vibration/: VibrationDevice.py
